Fix double scrollbar on FF

--- a/assets/src/admin/css/style.css
+++ b/assets/src/admin/css/style.css
@@ -16,6 +16,10 @@
   aspect-ratio: auto !important;
   min-height: auto !important;
 }
+
+body.maxi-blocks--active.site-editor-php .components-resizable-box__container {
+  overflow: visible;
+}
 @charset "UTF-8";
 .mbt-notice {
   font-family: 'Roboto', sans-serif;
